--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <Title>Odin's Recipes Practice</Title>
     </head>
     <body>
-        <h1>Odin Recipies</h1>
-        <a href="./recipes/fried-rice.html" target="_blank" rel="noopener noreferrer">Fried Rice</a>
+        <h1>Odin Recipes</h1>
+        <ul>
+        <li><a href="./recipes/fried-rice.html" target="_blank" rel="noopener noreferrer">Fried Rice</a></li>
+        <li><a href="./recipes/milk-tea.html" target="_blank" rel="noopener noreferrer">Milk Tea</a></li>
+        <li><a href="./recipes/iced-milp.html" target="_blank" rel="noopener noreferrer">Iced Milo</a></li>
     </body>
 </html>
